refactor(project): 安全与架构优化：加强认证、CORS分离、路径集中管理
- 加强认证范围和任务所有权检查

- 将 API 和静态资源的 CORS 策略分离

- 集中管理安全存储/部署路径解析

- 强化下载和部署验证流程